fix: restore interactions by adjusting app container z-index

--- a/public/css/app.less
+++ b/public/css/app.less
@@ -7,7 +7,7 @@
 .vapp-fullscreen-background {
     position: fixed;
     background-color: #282c34;
-    z-index: -1;
+    z-index: 0;
     
     .floating-switch-container {
         position: fixed;
@@ -133,7 +133,7 @@
     position: absolute;   
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 0;
     /* 调整亮度值  */
     filter: brightness(var(--leleo-brightness));
 }
